# Vx.Ember

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/: complex.gltf  geometry_shader.frag  geometry_shader.vert  light_gizmo_shader.frag  light_gizmo_shader.vert  light_shader.frag  presentation_shader.frag  presentation_shader.vert  rsl_shader.frag  rsl_shader.vert  suzanne.gltf
samples/: CMakeLists.txt
samples/sample_base/: CMakeLists.txt
samples/sample_base/source/: SampleBase.cpp  SampleBase.h
samples/simple/: CMakeLists.txt
source/: Ember.cpp  Ember.h  GeometryFramebuffer.cpp  GeometryFramebuffer.h  Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h  Program.cpp  Program.h  RSMFramebuffer.cpp  RSMFramebuffer.h  Shader.cpp  Shader.h  StructStringBuilder.cpp  StructStringBuilder.h  exceptions.h
source/core/: Ember.cpp  Ember.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.h  NodeVisitor.cpp  Primitive.cpp  Primitive.h  exceptions.h
source/gl/: BufferObject.cpp  BufferObject.h  Framebuffer.cpp  Framebuffer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h
source/gltf/: GLTFLoader.cpp  GLTFLoader.h
source/passes/: DebugImGuiPass.cpp  DebugImGuiPass.h  GeometryPass.cpp  GeometryPass.h  GizmoPass.cpp  GizmoPass.h  MatrixUpdatePass.cpp  MatrixUpdatePass.h  Pass.h  PresentationPass.cpp  PresentationPass.h  RSMPass.cpp  RSMPass.h
source/visitors/: CameraLocatorVisitor.cpp  CameraLocatorVisitor.h  GeometryRendererVisitor.cpp  GeometryRendererVisitor.h  NodeVisitor.cpp  (+11 more)
(+55 files in other folders)
